fix pdf export cutoff

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.break-inside-avoid-page {
+  break-inside: avoid-page;
+  page-break-inside: avoid;
+}
